--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,8 +4,16 @@
 
 <VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml"
       fx:controller="sample.Controller">
+    <fx:define>
+        <ToggleGroup fx:id="anime">
 
-    <Label text="I love coffee" fx:id="l"/>
-    <Button text="Submit" fx:id="button" onAction="#handleButtonClick"/>
+        </ToggleGroup>
+    </fx:define>
+<Label text="Choose An Anime" fx:id="cmon" />
+    <RadioButton text="Inuyasha" toggleGroup="${anime}"></RadioButton>
+    <RadioButton text="BNHA" toggleGroup="${anime}"></RadioButton>
+    <RadioButton text="Steins;Gate" toggleGroup="${anime}"></RadioButton>
+    <RadioButton text="One Punch Man" toggleGroup="${anime}"></RadioButton>
+
 
 </VBox>
